[package]
name = "enact"
version = "0.1.0"
edition = "2024"

[dependencies]
iddqd = { version = "0.3.17", default-features = false, features = ["std"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"], optional = true }
serde-tuple-vec-map = { version = "1.0.1", optional = true }

[features]
serde = ["dep:serde", "dep:serde-tuple-vec-map"]
