[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
enact = { version = "0.1.0", path = "../enact" }
enact-winit = { version = "0.1.0", path = "../enact-winit", features = ["serde"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", default-features = false, features = ["std"] }
toml = { version = "0.9.10", default-features = false, features = ["std", "serde", "parse"] }
winit = "0.30.12"
